@@ -3,13 +3,17 @@ package org.example.ProgettoUIDFinal;
 import javafx.animation.PauseTransition;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
+import javafx.scene.Node;
+import javafx.scene.Parent;
 import javafx.scene.Scene;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.ToggleButton;
+import javafx.scene.control.ToggleGroup;
 import javafx.scene.effect.ColorAdjust;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
@@ -23,11 +27,15 @@ import org.example.ProgettoUIDFinal.model.GameRepository;
 import org.example.ProgettoUIDFinal.model.ItemModel;
 import org.example.ProgettoUIDFinal.model.PlayerModel;
 
+import java.io.IOException;
 import java.net.URL;
 import java.util.List;
+import java.util.Map;
 import java.util.ResourceBundle;
 
 public class ShopController implements Initializable {
+
+    @FXML private StackPane centerHolder;
 
     @FXML private Label soldi;
     @FXML private Label carrello;
@@ -39,20 +47,37 @@ public class ShopController implements Initializable {
 
     @FXML private Button BackButton;
 
+    @FXML private ToggleButton hatButton, armorButton, powerUpsButton;
+    private final ToggleGroup toggleGroup = new ToggleGroup();
+
     @FXML private ToggleButton Cap1, Cap2, Cap3;
     @FXML private ToggleButton Dres1, Dres2, Dres3;
-    @FXML private ToggleButton sword, shield;
+    @FXML private ToggleButton sword, shield, boots;
 
     @FXML private Label DialogueLabel;
 
     @FXML private ImageView swordIcon;
     @FXML private ImageView shieldIcon;
+    @FXML private ImageView bootsIcon;
 
     private Scene homeScene;
 
+    private String currentFxmlPath = "/org/example/ProgettoUIDFinal/shop-hats.fxml";
+
     private List<ToggleButton> tuttiIBottoniDelNegozio() {
-        return List.of(Cap1, Cap2, Cap3, Dres1, Dres2, Dres3, sword, shield);
+        // Usiamo una lista che accetta null e poi filtriamo
+        java.util.List<ToggleButton> lista = java.util.Arrays.asList(
+                Cap1, Cap2, Cap3, Dres1, Dres2, Dres3, sword, shield, boots
+        );
+        // Restituiamo solo i bottoni che sono stati effettivamente caricati nell'FXML corrente
+        return lista.stream().filter(java.util.Objects::nonNull).toList();
     }
+
+    private final Map<String, String> idToFxml = Map.of(
+            "hatButton", "/org/example/ProgettoUIDFinal/shop-hats.fxml",
+            "armorButton", "/org/example/ProgettoUIDFinal/shop-armors.fxml",
+            "powerUpsButton", "/org/example/ProgettoUIDFinal/shop-powerUps.fxml"
+    );
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
@@ -64,64 +89,135 @@ public class ShopController implements Initializable {
             soldi.textProperty().bind(player.goldProperty().asString());
         }
 
-        for (ToggleButton b : tuttiIBottoniDelNegozio()) {
-            if (b == null) continue;
+        if (url != null && url.getPath().contains("Shop.fxml")) {
+            // Carichiamo subito i cappelli
+            setCenterFromFxml("/org/example/ProgettoUIDFinal/shop-hats.fxml");
 
+            // Selezioniamo il tasto nel menu
+            if (hatButton != null) hatButton.setSelected(true);
+        }
+
+        hatButton.setToggleGroup(toggleGroup);
+        armorButton.setToggleGroup(toggleGroup);
+        powerUpsButton.setToggleGroup(toggleGroup);
+
+        // 3. Refresh dello stato (per i bottoni appena caricati)
+        refreshShopState();
+
+    }
+
+    private void refreshShopState() {
+        GameRepository repo = GameRepository.getInstance();
+
+        // Adesso tuttiIBottoniDelNegozio() non crasha più se alcuni sono null
+        for (ToggleButton b : tuttiIBottoniDelNegozio()) {
             String buttonId = b.getId();
             String baseType = buttonId.toLowerCase();
 
             String resourceId;
-            int limiteAcquisto = 3;
-            int livelloFinaleVisivo = 3;
-
-            boolean isProgressiveMaxed = false;
-            boolean isNormalSoldOut = false;
-
-            if (baseType.equals("sword") || baseType.equals("shield")) {
+            // Utilizzo del campo powCounts come richiesto
+            if (List.of("sword", "shield", "boots").contains(baseType)) {
                 int currentLevel = repo.getPowCounts(baseType);
-
-                if (currentLevel >= limiteAcquisto) {
-                    isProgressiveMaxed = true;
-                    resourceId = baseType + livelloFinaleVisivo;
+                if (currentLevel >= 3) {
+                    resourceId = baseType + "3";
                 } else {
                     resourceId = baseType + (currentLevel + 1);
                 }
             } else {
                 resourceId = baseType;
-                isNormalSoldOut = repo.isItemOwned(resourceId);
             }
 
             ItemModel item = repo.getItem(resourceId);
-
             if (item != null) {
-                Label priceLabel = getPriceLabel(buttonId);
-                if (priceLabel != null) {
-                    if (isProgressiveMaxed || isNormalSoldOut) {
-                        priceLabel.setText("MAX");
+                updateVisuals(b, item, repo, baseType);
+            }
+        }
+    }
+
+    @FXML
+    private void handleMenu(ActionEvent event) {
+        MusicManager.getInstance().playSoundEffect("change_screen.mp3");
+        if (!(event.getSource() instanceof Node node)) return;
+
+        String id = node.getId();
+        if (idToFxml.containsKey(id)) {
+            this.currentFxmlPath = idToFxml.get(id);
+            setCenterFromFxml(this.currentFxmlPath);
+        }
+    }
+
+    private void setCenterFromFxml(String resourcePath) {
+        this.currentFxmlPath = resourcePath;
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource(resourcePath));
+            // IMPORTANTE: Se vuoi che i bottoni del nuovo FXML vengano iniettati
+            // in QUESTO controller, devi dirlo esplicitamente:
+            loader.setController(this);
+
+            Parent page = loader.load();
+
+            centerHolder.getChildren().setAll(page);
+
+            // Ora che i nuovi bottoni sono stati iniettati nei campi @FXML, aggiorniamo la UI
+            refreshShopState();
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private void refreshShopUI(Parent root) {
+        GameRepository repo = GameRepository.getInstance();
+        PlayerModel player = repo.getPlayer();
+
+        // Cerchiamo tutti i ToggleButton dentro il nuovo layout caricato
+        // Questo evita di dipendere dai riferimenti @FXML che potrebbero essere null
+        for (Node node : root.lookupAll(".toggle-button")) {
+            if (node instanceof ToggleButton b) {
+                String buttonId = b.getId();
+                if (buttonId == null) continue;
+
+                String baseType = buttonId.toLowerCase();
+                String resourceId;
+                boolean isMaxed = false;
+
+                // Logica Power-Ups (Sword, Shield, Boots) con powCounts
+                if (List.of("sword", "shield", "boots").contains(baseType)) {
+                    int currentLevel = repo.getPowCounts(baseType); // Utilizzo del campo powCounts
+                    if (currentLevel >= 3) {
+                        isMaxed = true;
+                        resourceId = baseType + "3";
                     } else {
-                        priceLabel.setText(String.valueOf(item.getPrice()));
+                        resourceId = baseType + (currentLevel + 1);
                     }
+                } else {
+                    // Logica Oggetti Normali (Hats, Armors)
+                    resourceId = baseType;
+                    isMaxed = repo.isItemOwned(resourceId);
                 }
 
-                // Gestione Icona
-                if (baseType.equals("sword") || baseType.equals("shield")) {
-                    ImageView iconView = getIconView(buttonId);
-                    if (iconView != null && item.getIconPath() != null) {
-                        Image icona = new Image(getClass().getResourceAsStream(item.getIconPath()));
-                        iconView.setImage(icona);
-                    }
-                }
+                ItemModel item = repo.getItem(resourceId);
+                if (item != null) {
+                    // Aggiorna il testo del prezzo cercando la label corrispondente nel root
+                    // Assumiti che la label del prezzo abbia un ID tipo "Price_sword" o simili nel FXML
+                    updatePriceLabelInRoot(root, buttonId, item, isMaxed);
 
-                if (isProgressiveMaxed) {
-                    b.setDisable(true);
-                    b.setOpacity(1.0);
-                    if (b.getGraphic() instanceof ImageView iv) {
-                        iv.setEffect(null);
+                    if (isMaxed) {
+                        soldOut(b); // Applica l'effetto Sold Out/Max
                     }
-                } else if (isNormalSoldOut) {
-                    soldOut(b);
+
+                    // Collega l'evento di click dinamicamente se non è già nel FXML
+                    b.setOnAction(this::AggiungiAlCarrello);
                 }
             }
+        }
+    }
+
+    private void updatePriceLabelInRoot(Parent root, String buttonId, ItemModel item, boolean isMaxed) {
+        // Questo metodo cerca la label del prezzo associata al bottone nel nuovo FXML
+        Label priceLabel = (Label) root.lookup("#Price_" + buttonId);
+        if (priceLabel != null) {
+            priceLabel.setText(isMaxed ? "MAX" : String.valueOf(item.getPrice()));
         }
     }
 
@@ -134,7 +230,7 @@ public class ShopController implements Initializable {
         String baseType = b.getId().toLowerCase();
 
         String resourceId;
-        if (baseType.equals("sword") || baseType.equals("shield")) {
+        if (baseType.equals("sword") || baseType.equals("shield") || baseType.equals("boots")) {
             int nextLevel = repo.getPowCounts(baseType) + 1;
             resourceId = baseType + nextLevel;
         } else {
@@ -194,7 +290,7 @@ public class ShopController implements Initializable {
             if (b.isSelected()) {
                 String baseType = b.getId().toLowerCase();
 
-                if (baseType.equals("sword") || baseType.equals("shield")) {
+                if (baseType.equals("sword") || baseType.equals("shield") || baseType.equals("boots")) {
                     int currentLevel = repo.getPowCounts(baseType);
 
                     int levelBought = currentLevel + 1;
@@ -215,7 +311,8 @@ public class ShopController implements Initializable {
                         b.setSelected(false);
                         rimuoviEffettoSelezione(b);
                         b.setDisable(true);
-                        b.setOpacity(1.0);
+
+                        soldOut(b);
 
                     } else {
                         int nextLevel = levelBought + 1;
@@ -282,6 +379,9 @@ public class ShopController implements Initializable {
                 player.setShield(item.getLayerPath(isMale));
                 player.setShieldName(item.getName());
                 if (item.getIconPath() != null) player.setShieldIcon(item.getIconPath());
+            } else if ("boots".equalsIgnoreCase(item.getType())) {
+                int attualeVel = player.getVel();
+                player.setVel(attualeVel + 3);
             }
         }
     }
@@ -293,6 +393,7 @@ public class ShopController implements Initializable {
             case "Dres1" -> Dress1; case "Dres2" -> Dress2; case "Dres3" -> Dress3;
             case "sword" -> Power1;
             case "shield" -> Power2;
+            case "boots" -> Power3;
             default -> null;
         };
     }
@@ -363,7 +464,48 @@ public class ShopController implements Initializable {
         return switch (buttonId) {
             case "sword" -> swordIcon;
             case "shield" -> shieldIcon;
+            case "boots" -> bootsIcon;
             default -> null;
         };
+    }
+
+    private void updateVisuals(ToggleButton b, ItemModel item, GameRepository repo, String baseType) {
+        String buttonId = b.getId();
+        boolean isPowerUp = List.of("sword", "shield", "boots").contains(baseType);
+        boolean isOwnedOrMaxed = false;
+
+        if (isPowerUp) {
+            isOwnedOrMaxed = repo.getPowCounts(baseType) >= 3;
+        } else {
+            isOwnedOrMaxed = repo.isItemOwned(baseType);
+        }
+
+        // --- LOGICA LABEL PREZZO ---
+        Label priceLabel = getPriceLabel(buttonId);
+        if (priceLabel != null) {
+            if (isPowerUp) {
+                // Solo per i potenziamenti mostriamo MAX se finito
+                priceLabel.setText(isOwnedOrMaxed ? "MAX" : String.valueOf(item.getPrice()));
+            } else {
+                // Per cappelli e armature mostriamo SEMPRE il prezzo
+                priceLabel.setText(String.valueOf(item.getPrice()));
+            }
+        }
+
+        // --- LOGICA ICONA (solo power-ups) ---
+        if (isPowerUp) {
+            ImageView iconView = getIconView(buttonId);
+            if (iconView != null && item.getIconPath() != null) {
+                iconView.setImage(new Image(getClass().getResourceAsStream(item.getIconPath())));
+            }
+        }
+
+        // --- LOGICA SOLD OUT / DISABILITAZIONE ---
+        if (isOwnedOrMaxed) {
+            soldOut(b); // Mostra l'overlay "SOLD OUT"
+        } else {
+            b.setDisable(false);
+            rimuoviEffettoSelezione(b);
+        }
     }
 }
